--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,6 +2,12 @@ pipeline {
     agent any
    
     stages {
+        stage('Set up') {
+            steps {
+                // Définir le chemin d'accès à Maven
+                sh 'export PATH=$PATH:/opt/apache-maven-3.6.3/bin'
+            }
+        }
         stage('Build') {
             steps {
                 sh 'mvn -B -DskipTests clean package'
