--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -14,7 +14,7 @@ sh '/opt/apache-maven-3.6.3/bin/mvn -B -DskipTests clean package'            }
         }
         stage('Test') {
             steps {
-                sh 'mvn test'
+               sh '/opt/apache-maven-3.6.3/bin/mvn test'
             }
             post {
                 always {
