--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
         }
         stage('Build') {
             steps {
-sh '/opt/apache-maven-3.6.3/bin/mvn -B -DskipTests clean compile'            }
+sh '/opt/apache-maven-3.6.3/bin/mvn -B -DskipTests clean package'            }
         }
         stage('Test') {
             steps {
