--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -22,18 +22,18 @@ sh '/opt/apache-maven-3.6.3/bin/mvn -B -DskipTests clean package'            }
                 }
             }
         }
-        stage('Deliver') {
-             steps {
-        script {
-          def componentsPath = 'build'
-          def nexusUrl = 'http://192.99.35.61:8081/repository/maven-releases/'
-          def nexusUsername = 'exosdata'
-          def nexusPassword = 'stage'
-          def nexusRepository = 'ExosData'
-          
-          sh "curl -u ${nexusUsername}:${nexusPassword} --upload-file ${componentsPath} ${nexusUrl}/repository/${nexusRepository}"
-        }
-      }
-        }
+     stage('Deliver') {
+  steps {
+    script {
+      def componentsPath = "${WORKSPACE}/target/my-app-1.0-SNAPSHOT.jar"
+      def nexusUrl = 'http://192.99.35.61:8081/repository/maven-releases/'
+      def nexusUsername = 'exosdata'
+      def nexusPassword = 'stage'
+      def nexusRepository = 'ExosData'
+      
+      sh "curl -u ${nexusUsername}:${nexusPassword} --upload-file ${componentsPath} ${nexusUrl}/repository/${nexusRepository}"
+    }
+  }
+}
     }
 }
