--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -26,7 +26,7 @@ sh '/opt/apache-maven-3.6.3/bin/mvn -B -DskipTests clean package'            }
   steps {
     script {
       def componentsPath = "${WORKSPACE}/target/my-app-1.0-SNAPSHOT.jar"
-      def nexusUrl = 'http://192.99.35.61:8081/repository/maven-releases/'
+      def nexusUrl = 'http://192.99.35.61:8081/repository/hamza/'
       def nexusUsername = 'exosdata'
       def nexusPassword = 'stage'
       def nexusRepository = 'ExosData'
