--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -25,15 +25,14 @@ sh '/opt/apache-maven-3.6.3/bin/mvn -B -DskipTests clean package'            }
      stage('Deliver') {
   steps {
     script {
-      def componentsPath = "target/my-app-1.0-SNAPSHOT.jar"
+      def componentsPath = "${WORKSPACE}/target/my-app-1.0-SNAPSHOT.jar"
       def nexusUrl = 'http://192.99.35.61:8081/repository/hamza/'
       def nexusUsername = 'exosdata'
       def nexusPassword = 'stage'
       def nexusRepository = 'hamza'
       
-          sh "curl -u ${nexusUsername}:${nexusPassword} --upload-file ${componentsPath} ${nexusUrl}/repository/${nexusRepository}"
-          sh "cd ${componentsPath} && curl -u ${nexusUsername}:${nexusPassword} --upload-file ./* ${nexusUrl}/repository/${nexusRepository}"
-          sh "curl -u exosdata:stage --upload-file ./target http://192.99.35.61:8081/repository/hamza/"
+      sh "curl -u ${nexusUsername}:${nexusPassword} --upload-file ${componentsPath} ${nexusUrl}/repository/${nexusRepository}"
+      sh "cd ${WORKSPACE}/target && curl -u ${nexusUsername}:${nexusPassword} --upload-file my-app-1.0-SNAPSHOT.jar ${nexusUrl}/repository/${nexusRepository}"
     }
   }
 }
