--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -27,13 +27,12 @@ pipeline {
             steps {
                 script {
                     sh "cd target/"
-                    def componentsPath = "my-app-1.0-SNAPSHOT.jar"
                     def nexusUrl = 'http://192.99.35.61:8081/repository/hamza/'
                     def nexusUsername = 'exosdata'
                     def nexusPassword = 'stage'
                     def nexusRepository = 'hamza'
     
-                    sh "curl -u ${nexusUsername}:${nexusPassword} --upload-file ${componentsPath} ${nexusUrl}/repository/${nexusRepository}" 
+                    sh "curl -u ${nexusUsername}:${nexusPassword} --upload-file my-app-1.0-SNAPSHOT.jar ${nexusUrl}/repository/${nexusRepository}" 
                 }
             }
         }
