--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -11,6 +11,7 @@ pipeline {
         stage('Build') {
             steps {
                 sh '/opt/apache-maven-3.6.3/bin/mvn -B -DskipTests clean package' 
+                sh 'cd target && ls '
             }
         }
         stage('Test') {
