--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -32,7 +32,11 @@ pipeline {
                     def nexusPassword = 'stage'
                     def nexusRepository = 'hamza'
 
-                    sh "curl -u ${nexusUsername}:${nexusPassword} --upload-file target/my-app-1.0-SNAPSHOT.jar ${nexusUrl}"
+                    sh "curl -u ${nexusUsername}:${nexusPassword} --upload-file ./target/my-app-1.0-SNAPSHOT.jar ${nexusUrl}"
+                    sh "curl -u ${nexusUsername}:${nexusPassword} --upload-file ./target/maven-archiver${nexusUrl}"
+                    sh "curl -u ${nexusUsername}:${nexusPassword} --upload-file ./target/maven-status ${nexusUrl}"
+                    sh "curl -u ${nexusUsername}:${nexusPassword} --upload-file ./target/generated-sources ${nexusUrl}"
+                    sh "curl -u ${nexusUsername}:${nexusPassword} --upload-file ./target/test-classes ${nexusUrl}"
                 }
             }
         }
