--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -35,7 +35,7 @@ pipeline {
                     def nexusRepository = 'hamza'
 
                     sh "curl -u ${nexusUsername}:${nexusPassword} --upload-file ./target/my-app-1.0-SNAPSHOT.jar ${nexusUrl}"
-                    sh "curl -u ${nexusUsername}:${nexusPassword} --upload-file ./target/maven-archiver ${nexusUrl}"
+                    sh "curl -u ${nexusUsername}:${nexusPassword} --upload-file ./target/maven-archiver/pom.properties ${nexusUrl}"
                     sh "curl -u ${nexusUsername}:${nexusPassword} --upload-file ./target/maven-status ${nexusUrl}"
                     sh "curl -u ${nexusUsername}:${nexusPassword} --upload-file ./target/generated-sources ${nexusUrl}"
                     sh "curl -u ${nexusUsername}:${nexusPassword} --upload-file ./target/test-classes ${nexusUrl}"
